<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInUpAct">

    <ImageView
        android:id="@+id/iv_avatar_sign_in"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/default_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_avatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/avatar"
        app:layout_constraintBottom_toTopOf="@+id/et_login"
        app:layout_constraintEnd_toEndOf="@+id/et_login"
        app:layout_constraintStart_toStartOf="@+id/et_login" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/double_default_margin"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_login"
        app:layout_constraintStart_toStartOf="@+id/et_login" />


    <EditText
        android:id="@+id/et_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"

        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"

        android:ems="10"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/et_first_name"
        app:layout_constraintEnd_toEndOf="@+id/et_login"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/et_login" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"

        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/et_last_name"
        app:layout_constraintEnd_toEndOf="@+id/et_login"
        app:layout_constraintStart_toStartOf="@+id/et_login" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"

        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_done"
        app:layout_constraintEnd_toEndOf="@+id/et_login"
        app:layout_constraintStart_toStartOf="@+id/et_login" />
</androidx.constraintlayout.widget.ConstraintLayout>